--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* BLOG POSTS */
+#blog-post {
+  padding: 1rem;
+}
+
+#blog-post p {
+  margin: 1rem 0;
+}
+
+#blog-post h2 {
+  font-size: 2rem;
+  margin: 1rem 0;
+}
+
+#blog-post h3 {
+  font-size: 1.5rem;
+}
+
+#blog-post ul {
+  margin: 2rem;
+}
+
+@media(min-width: 768px) {
+  #blog-post {
+    max-width: 1000px;
+    margin: auto;
+  }
+}
