--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,9 @@
 @tailwind base;
 
 @layer base {
-  section {
-    @apply my-10
-  }
+	section {
+		@apply my-10;
+	}
 }
 
 @tailwind components;
@@ -11,145 +11,145 @@
 
 /* BLOG POSTS */
 #blog-post {
-  padding: 1rem;
+	padding: 1rem;
 }
 
 #blog-post p {
-  margin: 1rem 0;
+	margin: 1rem 0;
 }
 
 #blog-post a {
-  transition: all 300ms;
-  text-decoration: underline;
+	transition: all 300ms;
+	text-decoration: underline;
 }
 
 #blog-post a:hover {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 #blog-post h2 {
-  font-size: 2rem;
-  margin: 1rem 0;
-  margin-bottom: 2rem;
-  font-weight: 600;
+	font-size: 2rem;
+	margin: 1rem 0;
+	margin-bottom: 2rem;
+	font-weight: 600;
 }
 
 #blog-post h2::after {
-  content: "";
-  display: block;
-  width: 100px;
-  /* Ancho de la línea */
-  height: 3px;
-  /* Grosor de la línea */
-  background-color: #383838;
-  /* Color de la línea */
-  margin: 0;
-  /* Espaciado superior e inferior */
+	content: "";
+	display: block;
+	width: 100px;
+	/* Ancho de la línea */
+	height: 3px;
+	/* Grosor de la línea */
+	background-color: #383838;
+	/* Color de la línea */
+	margin: 0;
+	/* Espaciado superior e inferior */
 }
 
 #blog-post h3 {
-  font-size: 1.3rem;
-  font-weight: 500 !important;
+	font-size: 1.3rem;
+	font-weight: 500 !important;
 }
 
 #blog-post ul {
-  margin: 2rem;
-  margin-top: 1rem;
-  list-style: circle;
+	margin: 2rem;
+	margin-top: 1rem;
+	list-style: circle;
 }
 
 #blog-post img {
-  width: 350px;
-  height: 250px;
-  margin: 4rem auto;
-  border-radius: 10px;
-}
-
-@media(min-width:768px) {
-  #blog-post img {
-    width: 700px;
-    height: 400px;
-  }
-}
-
-#blog-post .cta-banner {
-  width: 100%;
-  margin: 2rem 0 !important;
-  background-color: #1A7D85;
-  border-radius: 10px;
-  padding: 1rem !important;
-  color: white;
-  position: relative;
-  overflow: hidden;
-}
-
-@media (min-width:768px) {
-  #blog-post .cta-banner {
-    height: 300px;
-  }
-}
-
-#blog-post .cta-banner::before {
-  content: '';
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 50%;
-  bottom: -20px;
-  right: -30px;
-  z-index: 1;
-}
-
-#blog-post .cta-banner::after {
-  content: '';
-  position: absolute;
-  width: 450px;
-  height: 450px;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 50%;
-  bottom: 50px;
-  right: -60px;
-  z-index: 0;
-}
-
-#blog-post .cta-banner p {
-  font-size: 1.2rem;
-}
-
-#blog-post .cta-banner a {
-  border: 1px solid white;
-  padding: .5rem 2rem;
-  margin-top: 1rem;
-  transition: all 300ms;
-  border-radius: 5px;
-  text-decoration: none;
-}
-
-#blog-post .cta-banner a:hover {
-  border: 1px solid #1A7D85;
-  background-color: white;
-  color: #1A7D85;
-  cursor: pointer;
-}
-
-#blog-post .cta-banner>div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-#blog-post .cta-banner h2 {
-  font-size: 2.2 rem;
-}
-
-#blog-post .cta-banner h2::after {
-  display: none;
+	width: 350px;
+	height: 250px;
+	margin: 4rem auto;
+	border-radius: 10px;
 }
 
 @media (min-width: 768px) {
-  #blog-post {
-    max-width: 1000px;
-    margin: auto;
-  }
+	#blog-post img {
+		width: 700px;
+		height: 400px;
+	}
+}
+
+#blog-post .cta-banner {
+	width: 100%;
+	margin: 2rem 0 !important;
+	background-color: #1a7d85;
+	border-radius: 10px;
+	padding: 1rem 1rem !important;
+	color: white;
+	position: relative;
+	overflow: hidden;
+	height: fit-content;
+}
+
+#blog-post .cta-banner::before {
+	content: "";
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	background-color: rgba(255, 255, 255, 0.2);
+	border-radius: 50%;
+	bottom: -20px;
+	right: -30px;
+	z-index: 1;
+}
+
+#blog-post .cta-banner::after {
+	content: "";
+	position: absolute;
+	width: 450px;
+	height: 450px;
+	background-color: rgba(255, 255, 255, 0.2);
+	border-radius: 50%;
+	bottom: 50px;
+	right: -60px;
+	z-index: 0;
+}
+
+#blog-post .cta-banner h2 {
+	margin-bottom: 0;
+}
+
+#blog-post .cta-banner p {
+	font-size: 1.2rem;
+	margin-bottom: 3rem;
+}
+
+#blog-post .cta-banner a {
+	border: 1px solid white;
+	padding: 0.5rem 2rem;
+	/* margin-top: 2rem !important; */
+	transition: all 300ms;
+	border-radius: 5px;
+	text-decoration: none;
+}
+
+#blog-post .cta-banner a:hover {
+	border: 1px solid #1a7d85;
+	background-color: white;
+	color: #1a7d85;
+	cursor: pointer;
+}
+
+#blog-post .cta-banner > div {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+#blog-post .cta-banner h2 {
+	font-size: 2.2 rem;
+}
+
+#blog-post .cta-banner h2::after {
+	display: none;
+}
+
+@media (min-width: 768px) {
+	#blog-post {
+		max-width: 1000px;
+		margin: auto;
+	}
 }
